--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "bitski": "^0.9.0",
+    "web3": "1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
